# Sentium-Bridge

./: COVERAGE.md  Cargo.toml  README.md  TESTING.md  TEST_SUMMARY.md  build.rs  tarpaulin.toml
adapters/: README.md
benches/: router_benchmarks.rs
core/context/: mod.rs
core/router/: chain_adapter.rs  intent_translator.rs  mod.rs  routing_logic.rs
core/router/adapters/: aleo_adapter.rs  aptos_adapter.rs  astar_adapter.rs  avalanche_adapter.rs  berachain_adapter.rs  bitcoin_adapter.rs  bitcoin_cash_adapter.rs  bittensor_adapter.rs  bnb_adapter.rs  bouncebit_adapter.rs  celestia_adapter.rs  chia_adapter.rs  chiliz_adapter.rs  core_adapter.rs  cosmos_adapter.rs  dash_adapter.rs  dash_instantsend.rs  dash_pow_verifier.rs  decred_adapter.rs  digibyte_adapter.rs  dogecoin_adapter.rs  dogecoin_scrypt_verifier.rs  ethereum_adapter.rs  ethereum_classic_adapter.rs  filecoin_adapter.rs  flow_adapter.rs  harmony_adapter.rs  hedera_adapter.rs  icp_adapter.rs  iota_adapter.rs  kava_adapter.rs  layerzero_adapter.rs  litecoin_adapter.rs  mantra_adapter.rs  mod.rs  monero_adapter.rs  multiversx_adapter.rs  nano_adapter.rs  near_adapter.rs  oasis_adapter.rs  (+22 more)
light-clients/: manager.rs  mod.rs
light-clients/bitcoin/: mod.rs
light-clients/ethereum/: mod.rs
light-clients/polkadot/: mod.rs
proto/tron/: Tron.proto  balance_contract.proto
router/ai/: optimizer.py  requirements.txt
scripts/: analyze_coverage.sh  measure_coverage.sh
src/: lib.rs
tests/: adapter_error_tests.rs  adapter_integration_tests.rs  adapter_unit_tests.rs  integration_tests.rs  test_harmony_converter.rs
